Split long disclaimer line

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </header>
     <main id=main role=main>
       <aside class=warning>
-        Software licenses are serious legal business. If you need help with a license for a project, or analysis of a license that someone else has chosen, engage a lawyer.  Contributors to the software license synthesizer will <em>not</em> stand professionally or legally accountable to your for relying upon it.  If we had to take the risk you’d shoot yourself in the foot with this, we couldn’t make it publicly available in the first place.
+        Software licenses are serious legal business.
+        If you need help with a license for a project, or analysis of a license that someone else has chosen, engage a lawyer.
+        Contributors to the software license synthesizer will <em>not</em> stand professionally or legally accountable to your for relying upon it.
+        If we had to take the risk you’d shoot yourself in the foot with this, we couldn’t make it publicly available in the first place.
       </aside>
       <noscript><p>The license synthesizer requires JavaScript.</p></noscript>
     </main>
